# gallups

./: .gitignore  Justfile  package.json  pnpm-lock.yaml
.cargo/: config.toml
resume/: resume.typ
src/: app.html
src/routes/: +layout.svelte  +page.svelte  ProjCard.svelte  Section.svelte  layout.css
website/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
website/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
website/src/: app.html
website/src/lib/: LightSwitch.svelte  utils.svelte.ts
website/src/lib/wasm/pkg/: website.d.ts  website.js  website_bg.wasm  website_bg.wasm.d.ts
website/src/lib/wasm/src/: console_layer.rs  lib.rs
website/src/routes/: +layout.svelte  +page.svelte  ProjCard.svelte  SocialLink.svelte  layout.css
